--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Kaia Markert</h1>
+									<p>Paper Science Engineering and Chemical Engineering</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -46,9 +46,11 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									My work experience inlcudes x different companies. In high school, I first worked with Kotis properties doing construction on their clients' parking lots.
+									Also in high school, I worked at Salsarita's and at Vector Marketing. Both taught me how to be both a good team member and independent worker. 
+									My first paper-related job was with First Quality Tissue in Anderson, SC. I absolutely loved it. I worked in the wet lab doing R&D. I ran many experiments
+									and learned how to use a lot of machinery/testing equipment. I was also lucky enough to tour their packaging facility and some other departments in the mill. 
+									It is now summer of 2023 and I am working with Cascades in Rockingham, NC. It is another tissue mill and I am doing more R&D.
 								</p>
 								<section>
 									<div class="row">
